// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithButton /> by default matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ fNOQKu sc-AxgMl lavPwF"
    disabled={false}
    name="text"
  />
  <button
    className="sc-AxheI erMtSI"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with buttonProps prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ fNOQKu sc-AxgMl lavPwF"
    disabled={false}
    name="text"
  />
  <button
    className="sc-AxheI erMtSI"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with component inside button value matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ fNOQKu sc-AxgMl lavPwF"
    disabled={false}
    name="text"
    placeholder="Les props sont transmises"
  />
  <button
    className="sc-AxheI erMtSI"
    disabled={false}
    type="button"
  >
    <div
      className="k-Loader"
    >
      <svg
        className="k-Loader__circle"
        viewBox="0 0 10 10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={5}
          cy={5}
          fill={null}
          r={5}
        />
      </svg>
      <svg
        className="k-Loader__circle"
        viewBox="0 0 10 10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={5}
          cy={5}
          fill={null}
          r={5}
        />
      </svg>
      <svg
        className="k-Loader__circle"
        viewBox="0 0 10 10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={5}
          cy={5}
          fill={null}
          r={5}
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<TextInputWithButton /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ fNOQKu sc-AxgMl lavPwF"
    disabled={true}
    name="text"
  />
  <button
    className="sc-AxheI jAcVZD"
    disabled={true}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with error prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ xUmbP sc-AxgMl lavPwF"
    disabled={false}
    name="text"
  />
  <button
    className="sc-AxheI kTUOHm"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with props matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ fNOQKu sc-AxgMl lavPwF"
    disabled={false}
    name="text"
    placeholder="Les props sont transmises"
    value="foobar"
  />
  <button
    className="sc-AxheI erMtSI"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with tiny prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ ybBzL sc-AxgMl lavPwF"
    disabled={false}
    name="text"
  />
  <button
    className="sc-AxheI erMtSI"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ klxVlX sc-AxgMl lavPwF"
    disabled={false}
    name="text"
  />
  <button
    className="sc-AxheI kpbJfS"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;
